final touches to media queryies

--- a/index.html
+++ b/index.html
@@ -22,25 +22,7 @@
   </head>
   <body class="text-white">
 
-    <!--
-  Header Tag
-    <nav> -- class: navbar navbar-expand-lg sticky-top
-      <div> -- class: container-fluid
-        <button> -- class: navbar-toggler | type: button | data-bs-toggle: collapse | data-bs-target: #navbarNavAltMarkup | aria-controls: navBarNavAltMarkup | aria-expanded: false | aria-label: Toggle navigation
-          <span> -- class: navbar-toggler-icon
-        <div> -- class: collapse navbar-collapse | id: navbarNavAltMarkup
-        <div> -- class: navbar-nav
-          <a> -- class: nav-link active | aria-current: page | href: #Home
-            Home
-          <span> -- class: nav justify-content-end
-            <a> -- class: nav-link | href: #about-me
-              About Me
-            <a> -- class: nav-link | href: https://drive.google.com/file/d/1wv2uWN-obhFIj0F3cEO6k95jj61CjXCM/view?usp=sharing | target: _blank
-              Resume
-            <a> -- class: nav-link | href: #portfolio
-              Portfolio
-            <a> -- class: nav-link | href: #contact--me
-      -->
+    
   <header>
     <nav class="navbar navbar-expand-lg  bg-dark sticky-top py-1" aria-label="Fifth navbar example" >
       <!-- id="nav-id" -->
@@ -113,8 +95,8 @@
   <h1 class="h-6">P O R T F O L I O</h1> 
   <hr>
 </div>
-<div class="d-flex my-3">
-  <div class="card col-6 me-4 h-100">
+<div class="d-flex my-3 more-portfolio">
+  <div class="card col-6 me-4 h-100 project">
     <img src="/assets/images/project-2/project-2.png" class="card-img" alt="..." >
     <div class="card-img-overlay text-center" id="project-1">
       <h5 class="card-title h-6 text-center">D I B Z</h5>
@@ -174,13 +156,11 @@
     <h1 class="h-6">CONTACT ME</h1> 
     <hr>
   </div>
-  <div class="contact-container" id="contact-me">
-    <div class="contact-me-content">
-        <a> 312.636.9833 </a>
+  <div class="container d-flex" id="contact-me">
+        <p> 312.636.9833 </p>
         <a href="mailto:kvscoding@gmail.com" target="_blank">kvscoding@gmail.com</a>
         <a href="https://github.com/kvs1995">GitHub</a>
         <a href="https://www.linkedin.com/in/kendallvswanson/">LinkedIn</a>
-    </div>
 </div>
 
   </main>
