--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </div>
 <div class="d-flex my-3 more-portfolio">
   <div class="card col-6 me-4 h-100 project">
-    <img src="assets/images/project-2/project-2.png" class="card-img" alt="..." >
+    <img src="./assets/images/project-2/project-2.png" class="card-img" alt="..." >
     <div class="card-img-overlay text-center" id="project-1">
       <h5 class="card-title h-6 text-center">D I B Z</h5>
       <p class="card-text text-center">This app was created for property managers to offer services to renters, starting with a laundry machine reservation system.</p>
@@ -114,7 +114,7 @@
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card h-100">
-          <img src="assets/images/weather-dashboard.png" class="card-img" alt="..." >
+          <img src="./assets/images/weather-dashboard.png" class="card-img" alt="..." >
           <div class="card-img-overlay text-center" id="project-2">
             <h5 class="card-title">Weather Dashboard</h5>
             <p class="card-text">A nice and simple weather dashboard that presents you with basic information on the upcoming forecast of the searched city.</p>
@@ -124,7 +124,7 @@
       </div>
     <div class="col">
       <div class="card h-100">
-        <img src="assets/images/coding-quiz.png" class="card-img" alt="..." >
+        <img src="./assets/images/coding-quiz.png" class="card-img" alt="..." >
         <div class="card-img-overlay text-center" id="project-3">
           <h5 class="card-title">Quick Code Quiz</h5>
           <p class="card-text">New to coding and want to make sure you are grasping the basics? Try this quick coding quiz that tests you on the building blocks of CSS, HTML, and JavaScript. </p>
@@ -134,7 +134,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="assets/images/team-generator.png" class="card-img" alt="..." >
+        <img src="./assets/images/team-generator.png" class="card-img" alt="..." >
         <div class="card-img-overlay text-center" id="project-4">
           <h5 class="card-title">Rootin Tootin Team Generator</h5>
           <p class="card-text">This application allows users to create the perfect team roster containin a manager, engineers and intens.</p>
@@ -144,7 +144,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="assets/images/e-commer.png" class="card-img" alt="..." >
+        <img src="./assets/images/e-commer.png" class="card-img" alt="..." >
         <div class="card-img-overlay text-center" id="project-5">
           <h5 class="card-title">Easy Peasy ECommerce</h5>
           <p class="card-text">This application serves as a E-commerce platform to provide a suite of services to businesses of all sizes. 
