--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
     <div class="col-md-5 order-1 d-flex align-items-center" id="about-me-img">
       <img class="img-fluid mx-auto"  width="400" height="400" xmlns="" role="img" aria-label="" preserveAspectRatio="xMidYMid slice"
-      src="assets/images/Portfolio/IMG_4734.JPG" focusable="false"></img>
+      src="./assets/images/Portfolio/IMG_4734.JPG" focusable="false"></img>
     </div>
   </div>  
 
