--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="./assets/images/e-commer.png" class="card-img" alt="..." >
+        <img src="./assets/images/ecommer.png" class="card-img" alt="..." >
         <div class="card-img-overlay text-center" id="project-5">
           <h5 class="card-title">Easy Peasy ECommerce</h5>
           <p class="card-text">This application serves as a E-commerce platform to provide a suite of services to businesses of all sizes. 
